<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SL Appen</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share app</string>
    <string name="action_community">Community</string>
    <string name="action_beta">Beta feedback</string>
    <string name="action_refresh">Refresh</string>

    <string name="preference_debug_title">ALPHA ONLY Debug</string>
    <string name="preference_debug_summary">Activate debug to see statistics.</string>

    <string name="preference_language_title">Preferred language</string>
    <string name="preference_language_dialog_title">Choose language</string>
    <string name="preference_language_summary">Which language should the application use?</string>
    <string name="preference_language_default">English</string>

    <string name="menu_settings">Settings</string>
    <string name="title_main_activity">SL Avgangstavla</string>
    <string name="image">Image thumbnail</string>
    <string name="title">title</string>


    <string name="tickerAboutToDepart">About to depart</string>
    <string name="tickerDepartured">Departed</string>

    <string name="title_activity_main">CardsUI</string>
    <string name="desc">Description</string>
    <string name="overflow">Menu Overflow</string>
    <string name="color_stripe">Color Stripe</string>

    <string name="timehelptext">" "</string>

    <string name="betaDialogTitle">Beta application feedback</string>
    <string name="betaDialogTextView">Please describe your problem. We\'ve attached the context of your app to this message. Note while we don\'t collect any data on your identity sending feedback will explicitly share your position with us</string>
    <string name="betaDialogEditTextGot">What do you see but do not expect/want?</string>
    <string name="betaDialogEditTextWanted">What information did you want but did not get?</string>
    <string name="betaDialogButtonLeft">Cancel</string>
    <string name="betaDialogButtonRight">Send</string>

    <string name="departureDialogButtonLeft">App</string>
    <string name="is_realtime">Realtime</string>
    <string name="not_realtime">Isn\'t realtime</string>

    <string name="demotedButtonText">Gone! Undo?</string>

    <string name="shareMessage">"Hi! Im headed for %1$s departing in %2$s from %3$s according to SL Appen, http://bit.ly/sl-appen"</string>
    <string name="shareApp">"I'm testing Sl Appen for Android and you can too! Visit http://bit.ly/sl-appen to get started."</string>

    <string name="errorTextNotConnected">"We are not able to connect to the internet. Please turn on mobile data/WiFi and try again."</string>
    <string name="errorTextEmptyResponseNoPosition">"We are unable to locate you. Try again after turning on WiFi and/or GPS, thanks."</string>
    <string name="errorTextEmptyResponseNoDepartures">"We were not able to find any departures that match you location, the time or your search request. Please try again later."</string>
    <string name="errorTextTimeout">"We seem to be having problem talking to the server. Please try again later."</string>
    <string name="errorTextDefault">"We are squaching bugs as they come but seem to have missed this one. Please report or try again later."</string>

    <string name="privacyPolicyTitle">Privacy policy</string>
    <string name="privacyPolicyText">See our privacy policy for answers to questions about what data we send and store and why.</string>
    <string name="privacyPolicyButton">Privacy policy version 1</string>
    <string name="privacyPolicyUrl">https://docs.google.com/document/d/1nFk8jMsLN-EIo6KHZKQk6eeyhaABoEtROgEYdGyD08A</string>

    <string name="clearFavorites">Forget favorite departures</string>
    <string name="clearFavoritesSummary">Forget about your stared departures</string>
    <string name="clearFavoritesCleared">Your favorites have been forgotten!</string>
    <string name="clearRemoved">Forget removed departures</string>
    <string name="clearRemovedSummary">Forget about all the departures you have swiped away</string>
    <string name="clearRemovedCleared">We just forgot what departures you have removed!</string>

    <string name="cabCardText">Order a cab from Taxi Stockholm</string>
    <string name="cabCardTextConfirm">Are you sure you want to call a Cab?</string>
    <string name="cabCardTextConfirmLocation">Your approximately location is %1$s</string>

    <string name="card_guide_string_title">Swype me away!</string>
    <string name="card_guide_string_body">Swipe away cards with departures you have no interest in. Try it now by swiping away this card!</string>

    <string name="proximityTimeToLeave">You need to leave now to make it</string>
    <string name="proximityRunForIt">You might make it if you run for it</string>
    <string name="proximityImpossible">You\'re going to miss it</string>
    <string name="proximityRelax">You can wait a bit longer</string>

    <string name="trackingEnabled">Created a tracking notification</string>
    <string name="trackingError">Departure already tracked!</string>
    <string name="LABEL_SEARCH_STATION">Station?</string>
</resources>
