<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_beta"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:icon="@drawable/action_beta"
        android:title="@string/action_beta"
        />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:title="@string/action_search"
        />
    <item
        android:id="@+id/action_refresh"
        android:showAsAction="never"
        android:icon="@drawable/action_refresh"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/action_settings"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/action_about"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@drawable/action_help"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/action_community"
        android:title="@string/action_community"
        android:icon="@drawable/action_community"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="never"
        />

</menu> 