<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/betaDialogRelativeLayout"
    android:orientation="vertical"
    android:padding="10dp"
    >


    <TextView
        android:id="@+id/betaDialogTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/betaDialogTextView"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/betaDialogEditTextGot"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/betaDialogEditTextGot"
        android:layout_marginBottom="5dp"
        />
    <EditText
        android:id="@+id/betaDialogEditTextWanted"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/betaDialogEditTextWanted"
        />

</LinearLayout>